testing hyperlinks to same page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
         <div class = "table-of-contents" id = "table-of-contents">
             <ul>
-                <li><h1>About_Me.txt<h1></li>
-                <li><h1>Projects</h1></li>
-                <li><h1>Current_Activities</h1></li>
+                <li><h1><a href = "#About-Me">About_Me.txt</a><h1></li>
+                <li><h1><a href = "#Projects">Projects</a></h1></li>
+                <li><h1><a href = "#Current-Activities">Current_Activities</a></h1></li>
             </ul>
         </div>
 
         <!--<img src="../images/hotstuff.png" height="200" width="300" alt= "hot stuff">-->
 
         <div class = "subsection">
-            <div class = "subsection-title">
+            <div class = "subsection-title" id = "About-Me">
                 <h2> &nbsp </h2>
             </div>
             <div class = "subsection-content">
@@ -36,7 +36,7 @@
         </div>
 
         <div class = "subsection">
-            <div class = "subsection-title">
+            <div class = "subsection-title" id = "Projects">
                 <h2> &nbsp </h2>
             </div>
             <div class = "subsection-content">
@@ -64,7 +64,7 @@
         </div>
 
         <div class = "subsection">
-            <div class = "subsection-title">
+            <div class = "subsection-title" id = "Current-Activities">
                 <h2> &nbsp </h2>
             </div>
             <div class = "subsection-content">
