--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content ="0; url=https://mayank-sharma-16.github.io/templates/index/html">
+<meta http-equiv="refresh" content ="0; url=https://mayank-sharma-16.github.io/templates/index.html">
