--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <meta http-equiv="refresh" content ="0; url=https://mayank-sharma-16.github.io/templates/index.html">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
